--- a/layouts/404.html
+++ b/layouts/404.html
@@ -7,17 +7,16 @@
             class="text-[8rem] block font-bold text-text-dark dark:text-darkmode-text-dark">
             404
           </span>
-          <h1 class="h2 mb-4">Page not found</h1>
+          <h1 class="h2 mb-4">{{ T "page_not_found" }}</h1>
           <div class="content">
             <p>
-              The page you are looking for might have been removed, had its name
-              changed, or is temporarily unavailable.
+              {{ T "page_not_found_desc" }}
             </p>
           </div>
           <a
             href="{{ site.BaseURL | relLangURL }}"
             class="btn btn-primary mt-8">
-            Back to home
+            {{ T "back_to_home" }}
           </a>
         </div>
       </div>
