--- a/layouts/_partials/components/pagination.html
+++ b/layouts/_partials/components/pagination.html
@@ -18,7 +18,7 @@
         class="text-text-dark hover:bg-light dark:text-darkmode-text-dark dark:hover:bg-darkmode-light rounded px-2 py-1.5"
         href="{{ $paginator.Prev.URL }}"
         aria-label="Pagination Arrow">
-        <span class="sr-only">Previous</span>
+        <span class="sr-only">{{ T "previous" }}</span>
         <svg
           viewBox="0 0 20 20"
           fill="currentColor"
@@ -33,7 +33,7 @@
       </a>
     {{ else }}
       <span class="text-text-light rounded px-2 py-1.5">
-        <span class="sr-only">Previous</span>
+        <span class="sr-only">{{ T "previous" }}</span>
         <svg
           viewBox="0 0 20 20"
           fill="currentColor"
@@ -105,7 +105,7 @@
         class="text-text-dark hover:bg-light dark:text-darkmode-text-dark dark:hover:bg-darkmode-light rounded px-2 py-1.5"
         href="{{ $paginator.Next.URL }}"
         aria-label="Pagination Arrow">
-        <span class="sr-only">Next</span>
+        <span class="sr-only">{{ T "next" }}</span>
         <svg
           viewBox="0 0 20 20"
           fill="currentColor"
@@ -120,7 +120,7 @@
       </a>
     {{ else }}
       <span class="text-text-light rounded px-2 py-1.5">
-        <span class="sr-only">Next</span>
+        <span class="sr-only">{{ T "next" }}</span>
         <svg
           viewBox="0 0 20 20"
           fill="currentColor"
