--- a/layouts/_partials/essentials/header.html
+++ b/layouts/_partials/essentials/header.html
@@ -15,11 +15,11 @@
       for="nav-toggle"
       class="order-3 cursor-pointer flex items-center lg:hidden text-text-dark dark:text-white lg:order-1">
       <svg id="show-button" class="h-6 fill-current block" viewBox="0 0 20 20">
-        <title>Menu Open</title>
+        <title>{{ T "menu_open" }}</title>
         <path d="M0 3h20v2H0V3z m0 6h20v2H0V9z m0 6h20v2H0V0z"></path>
       </svg>
       <svg id="hide-button" class="h-6 fill-current hidden" viewBox="0 0 20 20">
-        <title>Menu Close</title>
+        <title>{{ T "menu_close" }}</title>
         <polygon
           points="11 9 22 9 22 11 11 11 11 22 9 22 9 11 -2 11 -2 9 9 9 9 -2 11 -2"
           transform="rotate(45 10 10)"></polygon>
@@ -141,7 +141,9 @@
         <a
           href="{{ site.Params.navigation_button.link | relLangURL }}"
           class="btn btn-outline-primary btn-sm hidden lg:inline-block"
-          {{ if (hasPrefix site.Params.navigation_button.link `http`) }}target="_blank" rel="noopener"{{ end }}>
+          {{ if (hasPrefix site.Params.navigation_button.link `http`) }}
+            target="_blank" rel="noopener"
+          {{ end }}>
           {{ site.Params.navigation_button.label }}
         </a>
       {{ end }}
